# swagger/v1/swagger.yaml
@@ -74,13 +74,17 @@ paths:
                   data:
                     "$ref": "#/components/schemas/product"
         '404':
-          description: product found active false
+          description: product not found
           content: {}
   "/v1/restaurants/{id}":
     get:
       summary: Get restaurant
       tags:
       - Restaurants
+      description: If you need to get the preview, use preview params to true and
+        put the token
+      security:
+      - bearer: []
       parameters:
       - name: id
         in: path
@@ -92,9 +96,14 @@ paths:
         required: false
         schema:
           type: string
+      - name: preview
+        in: query
+        required: false
+        schema:
+          type: string
       responses:
         '200':
-          description: restaurant found by id
+          description: restaurant with preview
           content:
             application/json:
               schema:
@@ -128,12 +137,14 @@ components:
               example: '10.0'
             name:
               type: string
-              example: Caesar Salad
+              example: Pasta with Tomato and Basil
             description:
               type: string
-              example: Our mission has been to help people achieve their health and
-                wellness goals. though weve changed over the years, our values have
-                remained the same.
+              example: Culver’s Restaurant was founded by the Culver family in 1984,
+                which eventually branched out to more than 300 franchised restaurants
+                all over the US. Culver’s is well-known for its ButterBurger, which
+                made the restaurant extremely famous. They also have other items which
+                include salads, sandwiches, desserts, etc.
               nullable: true
             position:
               type: integer
@@ -201,7 +212,7 @@ components:
                   items:
                     properties:
                       id:
-                        type: integer
+                        type: string
                       type:
                         type: string
                         example: sections
